--- a/portifolio.html
+++ b/portifolio.html
@@ -14,6 +14,6 @@
     <a href="contato.html">contato</a>
     <a href="sobre.html">sobre</a>
        </div>
-       <H1>HOME</H1>
+       <H1>portifolio</H1>
 </body>
 </html>
