--- a/index.html
+++ b/index.html
@@ -1,35 +1,52 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="PT-BR">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Receita de Bolo de Laranja</title>
-
+    <title>Hello world</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="CSS/style.css">
 </head>
-
 <body>
-    <h1>Receita de Bolo de laranja</h1>
-    <hr>
-    <img src="bolo de laranja.jpg" alt="">
-    <h2>ingredientes</h2>
+    <header>
+<img src="IMG/logo.svg" alt="logo Hello world">
+<nav class="">
     <ul>
-        <li> 4 ovos </li>
-        <li>1 xícara (chá) de óleo</li>
-        <li>casca de 1 laranja</li>
-        <li>1 colher (sopa) de fermento</li>
-        <li>2 xícaras (chá) de açúcar</li>
-        <li>suco de 2 laranjas</li>
-        <li>2 xícaras (chá) de farinha de trigo</li>
+        <li><a href="">Home</a></li>
+        <li><a href="">Sobre</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Suporte</a></li>
+        <li><a href="">Contato</a></li>
     </ul>
- <h3>Preparo</h3>
- <ol>
-    <li>Bata no liquidificador os ovos, o açúcar, o óleo, o suco e a casca da laranja.</li>
-    <li>Passe para uma tigela e acrescente a farinha de trigo e o fermento.</li>
-    <li>Leve para assar em uma forma com furo central, untada e enfarinhada, por mais ou menos 30 minutos.</li>
-    <li>Desenforme o bolo e molhe com suco de laranja.  </li>
- </ol>
-<p>Desenvolvido por Rafael</p>
-</body>
+</nav>
 
+    </header>
+
+    <main>
+        <section class="Home">
+          <div class="lado-esquerdo">
+<div class="content">
+<p>“Hello World!” Vamos aprender na prática</p>
+<h1>Será que é facil fazer o HTML e CSS sem o FIGMA?</h1>
+<p>Vamos testar isso agora, bora lá!</p>
+<div class="btns">
+    <button>Vamos começar!</button>
+    <button>30 minutos ;&#10089;</button>
+
+</div>
+
+</div>
+
+
+            <div class="lado-direito">
+<img src="IMG/planeta.svg" alt="planeta">
+
+            </div>
+          </div>  
+        </section>
+    </main>
+
+</body>
 </html>
